# ChangeLog for media-libs/akode
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/akode/ChangeLog,v 1.11 2006/06/03 09:56:21 gmsoft Exp $

  03 Jun 2006; Guy Martin <gmsoft@gentoo.org> akode-2.0_rc1.ebuild:
  Stable on hppa.

  20 May 2006; <nixnut@gentoo.org> akode-2.0_rc1.ebuild:
  Stable on ppc. bug #133151

  19 May 2006; Thomas Cort <tcort@gentoo.org> akode-2.0_rc1.ebuild:
  Stable on alpha and amd64 wrt Bug #133151.

  18 May 2006; <psi29a@gentoo.org> akode-2.0_rc1.ebuild:
  added to ~mips for testing

  14 May 2006; Markus Rothe <corsair@gentoo.org> akode-2.0_rc1.ebuild:
  Stable on ppc64; bug #133151

  14 May 2006; Jason Wever <weeve@gentoo.org> akode-2.0_rc1.ebuild:
  Stable on SPARC wrt bug #133151.

  13 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> akode-2.0_rc1.ebuild:
  Marking stable on x86 wrt bug #133151.

*akode-2.0_rc1 (29 Nov 2005)

  29 Nov 2005; Gregorio Guidi <greg_g@gentoo.org> +akode-2.0_rc1.ebuild:
  New version.

*akode-2.0_beta3 (24 Oct 2005)

  24 Oct 2005; Carsten Lohrke <carlo@gentoo.org> +akode-2.0_beta3.ebuild:
  version bump

*akode-2.0_beta2 (19 Oct 2005)

  19 Oct 2005; Gregorio Guidi <greg_g@gentoo.org> +akode-2.0_beta2.ebuild:
  New version.

*akode-2.0_beta1 (21 Sep 2005)

  21 Sep 2005; Gregorio Guidi <greg_g@gentoo.org> +metadata.xml,
  +akode-2.0_beta1.ebuild:
  Initial import. The code was splitted from kdemultimedia and is now
  developed independently from KDE. Retaining the KEYWORDS from kdemultimedia.
