@@ -1,1 +1,3 @@
 MD5 06861c2c6b8e5273c9b80cf736b9fd0e libsamplerate-0.1.2.tar.gz 707867
+RMD160 4e5453821b80b17586ad66068e409ed0437cca02 libsamplerate-0.1.2.tar.gz 707867
+SHA256 98b8766323c78b7b718dfd4ef6b9292bbf0796b742abb2319b8278cbeee731d4 libsamplerate-0.1.2.tar.gz 707867
