@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/akode
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/akode/ChangeLog,v 1.11 2006/06/03 09:56:21 gmsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/akode/ChangeLog,v 1.12 2006/06/08 13:57:33 flameeyes Exp $
+
+  08 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> akode-2.0_rc1.ebuild:
+  Add ~x86-fbsd keyword
 
   03 Jun 2006; Guy Martin <gmsoft@gentoo.org> akode-2.0_rc1.ebuild:
   Stable on hppa.
